20230918 - Arquivos Aula e Codecademy

--- a/Entra21/Modulo_04/20230911/index.html
+++ b/Entra21/Modulo_04/20230911/index.html
@@ -13,13 +13,13 @@
         <img src="gorpo2.png" width=250px><br>
         <div class="dados" align="center">
         <br>
-            <label style="margin-right: 16px">USERNAME: </label><input style="margin-left: 5px" inputmode="email" size="50px">
+            <label align="margin-left" style="margin-right: 16px" >USERNAME: </label><input align='margin-right' style="margin-left: 5px" inputmode="email" size="50px" placeholder="Entre com o USERNAME">
         <br>            
-            <label style="margin-right: 16px">PASSWORD: </label><input style="margin-left: 6px" inputmode="password" size="50px">
+            <label align="margin-left" style="margin-right: 16px">PASSWORD: </label><input align='margin-right'style="margin-left: 6px" inputmode="password" size="50px" placeholder="Entre com o PASSWORD">
         <br><br>
-            <label style="margin-right: 16px">ENDEREÇO: </label><input style="margin-left: 5px" inputmode="text" size="50px" >
+            <label align="margin-left" style="margin-right: 16px">ENDEREÇO: </label><input align='margin-right'style="margin-left: 5px" inputmode="text" size="50px" placeholder="Entre com o ENDEREÇO">
         <br>
-            <label style="margin-right: 16px">CIDADE: </label><input style="margin-left: 5px" inputmode="text" size="50px">
+            <label align="margin-left">CIDADE: </label><input align='margin-right'style="margin-left: 5px" style="border-radius: 10%;"inputmode="text" size="50px" placeholder="Entre com o CIDADE">
         </div>
 
         <br><br>
