--- a/Entra21/Modulo_04/20230919_ex/index.html
+++ b/Entra21/Modulo_04/20230919_ex/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Média Ponderada</title>
+    <title>MÉDIA PONDERADA</title>
     
 </head>
 <body>
