--- a/Entra21/Modulo_10/20231114_Aula01/index.html
+++ b/Entra21/Modulo_10/20231114_Aula01/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Mod.10 - Aula01 - EDV</title>
   </head>
   <body>
     <div id="root"></div>
